[gd_scene load_steps=6 format=3 uid="uid://b0eb2yt6v71dc"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_e0vo1"]
[ext_resource type="Resource" uid="uid://dh6dajx166dcn" path="res://test_inv.tres" id="2_8id7m"]
[ext_resource type="Script" path="res://Player_Related/interact_ray.gd" id="2_oehrs"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_iejka"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o8sp3"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02936, 0)
script = ExtResource("1_e0vo1")
inventory_data = ExtResource("2_8id7m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_iejka")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_o8sp3")
skeleton = NodePath("../..")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.584334, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0501263, 0)

[node name="interact_ray" type="RayCast3D" parent="head"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 2.5, 0)
script = ExtResource("2_oehrs")

[node name="Prompt" type="Label" parent="head/interact_ray"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -11.5
offset_right = 32.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hotbar_pos" type="Label" parent="."]
visible = false
offset_left = 24.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 80.0

[node name="item_lbl" type="Label" parent="."]
visible = false
offset_left = 24.0
offset_top = 56.0
offset_right = 88.0
offset_bottom = 112.0
